# igvc

./: .gitignore  .gitmodules  README  README.md  igvc.rosinstall
LM4F_BreakoutBoard/: IGVC_breakout_board.b#1  IGVC_breakout_board.b#2  IGVC_breakout_board.brd  IGVC_breakout_board.pro  IGVC_breakout_board.s#1  IGVC_breakout_board.s#2  IGVC_breakout_board.s#3  IGVC_breakout_board.sch  IGVC_breakout_board_00.job  IGVC_breakout_board_01.job  IGVC_breakout_board_02.job  IGVC_breakout_board_03.job  IGVC_breakout_board_04.job  IGVC_breakout_board_05.job  IGVC_breakout_board_06.job  IGVC_breakout_board_07.job  IGVC_breakout_board_08.job  IGVC_breakout_board_09.job  IGVC_breakout_board_BOM  eagle.epf
doc/: IGVC2014Paper.docx
embedded/lm4f/: JSONProtocolTester.py
embedded/lm4f/RASLib/: Makefile
embedded/lm4f/bypass_node/: Main.c
embedded/lm4f/lm4f_node/: Main.c  Makefile  RASDemo.axf  RASDemo.out  RASLibTest.axf  RASLibTest.htm  RASLibTest.uvopt  RASLibTest.uvproj  RASLibTest_RASLibTest.dep  Startup.d  handlers.c  handlers.d  instructionHash.c.temp  instructionHash.h.temp  main.c  main.d
html/: index.html  main.js
ros_groovy_workspace/: .gitignore  drivers.launch
ros_groovy_workspace/src/: test.launch
ros_groovy_workspace/src/ekf/: CMakeLists.txt  package.xml
ros_groovy_workspace/src/gps_trimble_driver/: CMakeLists.txt  gps-driver.py  gpsDriver.py  gpsPublisher.py  package.xml
ros_groovy_workspace/src/igvc_sim/: CMakeLists.txt  README  (+1 more)
ros_groovy_workspace/src/imu_vn200/: CMakeLists.txt  package.xml
ros_groovy_workspace/src/imu_vn200/launch/: launch.launch
ros_groovy_workspace/src/imu_vn200/msg/: vn_200_ins_soln.msg
ros_groovy_workspace/src/imu_vn200/src/: imu-to-yaw.py  imu_vn200_driver.py
ros_groovy_workspace/src/teleop_twist/: CMakeLists.txt  package.xml
ros_groovy_workspace/src/teleop_twist/src/: teleop_twist.py
ros_stacks/: .gitignore
ros_stacks/igvc_control/: stack.xml
ros_stacks/igvc_hardware/: stack.xml
ros_stacks/igvc_launch/: mainpage.dox  manifest.xml
ros_stacks/igvc_perception/: stack.xml
ros_stacks/igvc_sim/: README  manifest.xml
udev_rules/: vn200.rules
wtf_catkin/: stack.xml
wtf_catkin/drive_path/: CMakeLists.txt
wtf_catkin/vision/: manifest.xml
(+176 files in other folders)
