<?xml version="1.0"?>
<package>
  <name>imu_vn200</name>
  <version>0.1.0</version>
  <description>Package for driver and processor node(s) for the VN 200 IMU</description>

  <maintainer email="ut.ieee.ras@gmail.com">RAS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
